# pyvectordb

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: code-review.yml
docker-compose/: .gitignore  docker-compose.chromadb.yml  docker-compose.milvus.yml  docker-compose.pgvector.yml  docker-compose.pinecone.yml  docker-compose.qdrant.yml  docker-compose.weaviate.yml
docker-compose/chromadb/: authz.yaml.example
examples/: chromadb.py  milvus.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
pyvectordb/: __init__.py  distance_function.py  driver.py  vector.py  vector_distance.py
pyvectordb/chromadb/: __init__.py  chromadb.py  distance.py
pyvectordb/milvus/: __init__.py  distance.py
pyvectordb/pgvector/: __init__.py  model.py  pgvector.py
pyvectordb/pinecone/: __init__.py  distance.py
pyvectordb/qdrant/: __init__.py  qdrant.py
pyvectordb/weaviate/: __init__.py  distance.py
tests/integration/: test_chromadb.py  test_milvus.py  test_pgvector.py  test_pinecone.py  test_qdrant.py  test_weaviate.py
