[tool.poetry]
name = "pyvectordb"
version = "0.1.5.1"
description = "Simple Wrapper for vector database in Python with minimal support for CRUD and retrieve."
authors = ["M Razif Rizqullah <razifrizqullah@gmail.com>"]
repository = "https://github.com/rizquuula/pyvectordb"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pgvector = "^0.3.5"
sqlalchemy = "^2.0.36"
qdrant-client = "^1.12.0"
chromadb = "0.5.20"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
