[project]
name = "pyvectordb"
version = "0.1.7.1"
description = "Simple Wrapper for vector database in Python with minimal support for CRUD and retrieve."
authors = [{name = "M Razif Rizqullah", email = "razifrizqullah@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
pgvector = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "psycopg2-binary>=2.9.10"]
qdrant = ["qdrant-client>=1.16.2"]
chromadb = ["chromadb>=1.5.0"]
dev = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "psycopg2-binary>=2.9.10", "pytest>=8.3.3"]
all = ["pgvector>=0.4.2", "sqlalchemy>=2.0.36", "qdrant-client>=1.16.2", "chromadb>=1.5.0", "psycopg2-binary>=2.9.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]